# llm-probe

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMMIT_PLAN.md  CONTRIBUTING.md  Dockerfile  README-hf.md  README.md  TESTING_GUIDE.md  docker-compose.yml  package-lock.json  package.json  start.sh  test-api.sh  validate-quality.ts
.claude/: PROJECT_CONTEXT.md
.github/workflows/: ci.yml  codex-review.yml
articles/: article-01-why-traditional-testing-fails.md
backend/: .env.development.example  .env.example  .env.production.example  jest.config.js  package.json
backend/src/: index.ts
backend/src/api/: summarization.ts
backend/src/auth/: api-key-factory.ts  api-key-provider.interface.ts  env-api-key-provider.ts  secrets-manager-api-key-provider.ts
backend/src/config/: env-validator.ts
backend/src/errors/: llm-errors.ts
backend/src/llm/: bedrock-provider.ts  llm-factory.ts  llm-provider.interface.ts  ollama-provider.ts
backend/src/middleware/: api-key-auth.ts
backend/src/services/: prompt-builder.ts  summarization.ts
backend/src/types/: schemas.ts
backend/src/utils/: logger.ts  timeout.ts  token-counter.ts
backend/tests/unit/: prompt-builder.test.ts  schema-validation.test.ts
context/: Ally_Interview_Prep_Guide.html  Interview_Cheat_Sheet.html  LLM_Testing_Technical_Deep_Dive.md
docs/: CODING_STANDARDS.md  OLLAMA_SETUP.md  README.md  SECURITY.md  SETUP.md  TESTING_STRATEGY.md  architecture.md  getting-started.md  tech-stack.md  testing-strategy.md
docs/deployment/: DEPLOYMENT_GUIDE.md  HF_SPACES_DEPLOYMENT.md  HUGGINGFACE_DEPLOYMENT_STEPS.md
docs/development/: BLOG_SERIES_OUTLINE.md  CODE_QUALITY_AUDIT.md  DEEP_CODE_REVIEW.md  END_TO_END_TEST_RESULTS.md  FINAL_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  PATH_TO_10_OUT_OF_10.md  PHASE2_COMPLETE.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md
golden-dataset/: README.md  index.json  sample-001.json  sample-002.json  sample-003.json  sample-004.json  sample-005.json
infrastructure/: .gitignore  README.md  deploy.sh  package.json  tsconfig.json
infrastructure/lib/: llm-testing-stack.ts
py-test/: .gitignore  README.md  STANDARDS.md  pyproject.toml  requirements.txt
py-test/src/evaluators/: summary_evaluator.py
py-test/src/metrics/: text_similarity.py
py-test/src/monitoring/: __init__.py  metrics_aggregator.py
py-test/src/performance/: __init__.py  performance_collector.py
py-test/src/security/: security_detector.py
py-test/src/utils/: golden_dataset.py  logger.py
py-test/tests/unit/: test_golden_dataset.py  test_metrics_aggregator.py  test_performance_collector.py  test_summary_evaluator.py  test_text_similarity.py
ts-test/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
ts-test/src/evaluators/: summary-evaluator.ts
ts-test/src/metrics/: text-similarity.ts
ts-test/src/monitoring/: metrics-aggregator.ts
ts-test/src/performance/: performance-collector.ts
ts-test/src/security/: security-detector.ts
ts-test/src/utils/: golden-dataset.ts  logger.ts
ts-test/tests/component/: summary-quality.test.ts
ts-test/tests/e2e/: live-endpoint.test.ts
ts-test/tests/helpers/: api-key.ts
ts-test/tests/integration/: README.md  api-contract.test.ts  summarization-api.test.ts
ts-test/tests/monitoring/: metrics-aggregator.test.ts
ts-test/tests/performance/: performance-tracking.test.ts
ts-test/tests/property-based/: README.md  summarization-invariants.test.ts
ts-test/tests/regression/: golden-dataset-regression.test.ts
ts-test/tests/security/: security-tests.test.ts
ts-test/tests/unit/: golden-dataset-loader.test.ts  prompt-builder.test.ts  schema-validation.test.ts  (+3 more)
